1.1.2: BETA 
     - moved source code from sourceforge to github
     - added folder upload support via folder drag and drop and menu dialog
     - changed file/folder action dialog
     - improved Highlighter extension
1.1.1: 2016/9/10 
     - fixed broken images in ImageInfo extension bug
     - fixed wrong thumbnail toggle state bug in QuickToggle extension
     - fixed highlighting on not selectable folders is not possible bug
     - fixed search dialog with wrong input types and formatting problem bugs
     - fixed missing date range search and broken thumbnail bugs
     - fixed unable to disable AFS ACL changes bug (thx Stephen Joyce)
     - fixed missing hyphen in AFS group and user names support bug (thx Stephen Joyce) 
     - fixed WebDAV quota bug
     - fixed tabbing does not work with bookmarks, auto refresh, file list table header bug
     - fixed WebDAV properties are not moved correctly bug (mod_perl only)
     - fixed WebDAV SEARCH method handling bugs
     - fixed wrong content length in conjunction with wide UTF-8 characters bug     
     - added missing redirect after direct redirected folder call
     - added profile tab to GPXViewer extension
     - added cookies hook for web interface extensions
     - added new settings hooks for settings dialog
     - added Feedback extension
     - added SaveSettings extension
     - added feature 'dontregister' for all extensions
     - added markdown support to TextEditor extension
     - added CodeMirror editor to TextEditor extension
     - disabled CalDAV, CalDAV Schedule, CardDAV, GroupDAV, ACL, BIND, SEARCH support by default
     - improved Diff extension dialog layout
     - improved performance
     - made a lot of code more "Perl Best Practices" compliant
     - refactored Perl code for request handling, web interface
     - reformatted Perl code with tidy
     - fixed memory leaks
     - updated JS libraries (JQuery, JQuery-UI, ckeditor)
     
1.1.0: 2015/9/9